Updates to logo.html

--- a/logos.html
+++ b/logos.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css' />
-    <title>Portfolio: Testive marketing projects</title>
+    <title>Portfolio: Graphic design projects</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="images/portfolio-icon.png" />
@@ -30,21 +30,14 @@
     <section class="portfolio-testive-home-page">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="https://andrealeigh.github.io/testive_portfolio/testive_home_page/index.html" target=blank>
-                    <img class="portfolio-piece-icon-image" src="images/ps-testive-home-page-icon.png" alt="testive home page icon" />
-                </a></button>
+                <button class="portfolio-piece-icon portfolio-piece-no-hover">
+                    <img class="portfolio-piece-icon-image portfolio-piece-no-hover" src="images/ps-laurels-logo.png" alt="testive home page icon" />
+                </button>
             </div>
             <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Home Page Redesign</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including a home page redesign of their marketing website.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I led the design process and HTML/SCSS development of their new home page:</p>
-                <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Ideation meetings with Marketing, Sales, Product, and Development</li>
-                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil sketches; grayscale wireframes in Adobe Illustrator</li>
-                    <li class="portfolio-piece-list-item">High fidelity mockups: Adobe Illustrator mockups</li>
-                    <li class="portfolio-piece-list-item">HTML/SCSS prototype</li>
-                    <li class="portfolio-piece-list-item">Implementation of HTML/SCSS prototype into Wordpress</li>
-                </ul>
+                <h2 class="portfolio-piece-header">Logo: Testive Inc.</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. Their logo is Sly T. Fox. I added laurels to Sly for marketing materials.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I created the laurels and added it to Testive&rsquo;s existing logo using Adobe Illustrator.</p>
             </div>
         </div>
     </section>
@@ -52,20 +45,14 @@
     <section class="portfolio-testive-landing-page">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Responsive Landing Page</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including designing and building landing pages.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I designed and built a landing page intended to encourage students at specific schools to sign up for Testive:</p>
-                <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Ideation meetings with Marketing, Sales, Product, and the Director of School Partnerships</li>
-                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil wireframes, whiteboard sketches</li>
-                    <li class="portfolio-piece-list-item">High fidelity mockups: Adobe Illustrator mockups</li>
-                    <li class="portfolio-piece-list-item">HTML/SCSS development and deployment</li>
-                </ul>
+                <h2 class="portfolio-piece-header">Logo: Call Congress Now</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Call Congress Now is a political responsive web app I designed and co-developed. The logo inspiration came from the upside-down flag on House of Cards.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I created the vector logo using Adobe Illustrator.</p>
             </div>
             <div class="portfolio-piece-column">
-                <div class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">
-                    <img class="portfolio-piece-icon-image" src="images/testive-marketing-icon.png" alt="testive landing page icon" />
-                </a></div>
+                <button class="portfolio-piece-icon portfolio-piece-no-hover">
+                    <img class="portfolio-piece-icon-image portfolio-piece-no-hover" src="images/ps-ccn.png" alt="testive landing page icon" />
+                </button>
             </div>
         </div>
     </section>
@@ -73,14 +60,14 @@
     <section class="portfolio-testive-branding">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/testive_color_guide.pdf">
-                    <img class="portfolio-piece-icon-image" src="images/testive-branding-icon.png" alt="testive branding icon" />
-                </a></button>
+                <button class="portfolio-piece-icon portfolio-piece-no-hover">
+                    <img class="portfolio-piece-icon-image portfolio-piece-no-hover" src="images/ps-snapability.png" alt="testive branding icon" />
+                </button>
             </div>
             <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Color Style Guide</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including providing direction on Testive&rsquo;s evolving brand and visual style.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>As part of an effort to standardize Testive&rsquo;s visual language, I created a color style guide for their app and marketing website.</p>
+                <h2 class="portfolio-piece-header">Logo: Snapability</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Snapabiliy is a mobile photo app. I created the vector to serve as the app thumbnail and logo.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I created the vector logo using Adobe Illustrator.</p>
             </div>
         </div>
     </section>
@@ -88,20 +75,14 @@
     <section class="portfolio-testive-landing-page">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <h2 class="portfolio-piece-header">Responsive Landing Page</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Testive is an education startup company. As the primary UX/UI designer, I collaborated closely with the Marketing &amp; Sales team on a number of projects, including designing and building landing pages.</p>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I designed and built a landing page intended to encourage students at specific schools to sign up for Testive:</p>
-                <ul class="portfolio-piece-list">
-                    <li class="portfolio-piece-list-item">Ideation meetings with Marketing, Sales, Product, and the Director of School Partnerships</li>
-                    <li class="portfolio-piece-list-item">Low fidelity mockups: Paper/pencil wireframes, whiteboard sketches</li>
-                    <li class="portfolio-piece-list-item">High fidelity mockups: Adobe Illustrator mockups</li>
-                    <li class="portfolio-piece-list-item">HTML/SCSS development and deployment</li>
-                </ul>
+                <h2 class="portfolio-piece-header">Logo: 99 Designs Contest</h2>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>99 designs is a freelance makretplace that holds logo contests. The logo was for a company that said: &ldquo;We are doing a really fun sunglass brand based on styles of sunglasses worn by shady characters in films.&rdquo;</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I created the vector logo using Adobe Illustrator.</p>
             </div>
             <div class="portfolio-piece-column">
-                <div class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">
-                    <img class="portfolio-piece-icon-image" src="images/testive-marketing-icon.png" alt="testive landing page icon" />
-                </a></div>
+                <button class="portfolio-piece-icon portfolio-piece-no-hover">
+                    <img class="portfolio-piece-icon-image portfolio-piece-no-hover" src="images/ps-99-designs.png" alt="testive landing page icon" />
+                </button>
             </div>
         </div>
     </section>
