--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
     <section class="portfolio-icons">
         <div class="portfolio-piece-row portfolio-icons-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="#">
+                <button class="portfolio-piece-icon"><a href="logos.html">
                     <img class="portfolio-piece-icon-image" src="images/ps-portfolio-icons.png" alt="portfolio icons" />
                 </a></button>
             </div>
