Copy changes to logo.html

--- a/logos.html
+++ b/logos.html
@@ -66,7 +66,7 @@
             </div>
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">Logo: Snapability</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Snapabiliy is a mobile photo app. I created the vector to serve as the app thumbnail and logo.</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>Snapability is a mobile photo app. I created the vector to serve as the app thumbnail and logo.</p>
                 <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I created the vector logo using Adobe Illustrator.</p>
             </div>
         </div>
@@ -76,7 +76,7 @@
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">Logo: 99 Designs Contest</h2>
-                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>99 designs is a freelance makretplace that holds logo contests. The logo was for a company that said: &ldquo;We are doing a really fun sunglass brand based on styles of sunglasses worn by shady characters in films.&rdquo;</p>
+                <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Overview: </span>99 designs is a freelance marketplace that holds logo contests. The logo was for a company that said: &ldquo;We are doing a really fun sunglasses brand based on styles of sunglasses worn by shady characters in films.&rdquo;</p>
                 <p class="portfolio-piece-blurb"><span class="portfolio-piece-blurb-emphasis">Role: </span>I created the vector logo using Adobe Illustrator.</p>
             </div>
             <div class="portfolio-piece-column">
