uploaded new resume

--- a/ccn.html
+++ b/ccn.html
@@ -112,7 +112,7 @@
                 <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh" target="_blank"><img src="images/github.svg" alt="github"></a>
                 <a class="portfolio-footer-social-media-icon" href="mailto:leigh.andrea@gmail.com" target="_blank"><img src="images/email.svg" alt="email"></a>
             </div>
-            <a class="portfolio-about-resume-link" href="#">Download Resume</a>
+            <a class="portfolio-about-resume-link" href="andrea-designer-resume.pdf" target="_blank">Download Resume</a>
     </footer>
 
     <script src="js/smooth-scroll.min.js"></script>
