--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section id="about" class="portfolio-intro">
     <p class="portfolio-intro-blurb"><span class="portfolio-intro-blurb-emphasis">I am a UX/UI designer</span> in the Greater Boston Area.</p>
-    <p class="portfolio-intro-blurb">My work experience includes designing for B2B and B2C web products within education and healthcare startups.<br>I previously worked in healthcare and learned a lot about humans. <a class="portfolio-intro-resume-link" href="#">Download Resume</a></p>
+    <p class="portfolio-intro-blurb">My work experience includes designing for B2B and B2C web products within education and healthcare startups.<br>I previously worked in healthcare and learned a lot about humans. <a class="portfolio-intro-resume-link" href="andrea-designer-resume.pdf" target="_blank">Download Resume</a></p>
     </section>
 
     <section class="portfolio-portfolio">
@@ -70,7 +70,7 @@
                 <a class="portfolio-footer-social-media-icon" href="https://github.com/andrealeigh" target="_blank"><img src="images/github.svg" alt="github"></a>
                 <a class="portfolio-footer-social-media-icon" href="mailto:leigh.andrea@gmail.com" target="_blank"><img src="images/email.svg" alt="email"></a>
             </div>
-            <a class="portfolio-about-resume-link" href="#">Download Resume</a>
+            <a class="portfolio-about-resume-link" href="andrea-designer-resume.pdf" target="_blank">Download Resume</a>
     </footer>
 
     <script src="js/smooth-scroll.min.js"></script>
