Last tweaks for branch merge

--- a/marketing.html
+++ b/marketing.html
@@ -63,7 +63,7 @@
                 </ul>
             </div>
             <div class="portfolio-piece-column">
-                <div class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">
+                <div class="portfolio-piece-icon"><a href="school_landing_page.pdf" target="_blank">
                     <img class="portfolio-piece-icon-image" src="images/testive-marketing-icon.png" alt="testive landing page icon" />
                 </a></div>
             </div>
@@ -73,7 +73,7 @@
     <section class="portfolio-testive-branding">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/testive_color_guide.pdf">
+                <button class="portfolio-piece-icon"><a href="testive_color_guide.pdf" target="_blank">
                     <img class="portfolio-piece-icon-image" src="images/testive-branding-icon.png" alt="testive branding icon" />
                 </a></button>
             </div>
