--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
     <section id="portfolio" class="portfolio-trinetx">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="https://www.trinetx.com/" target=blank>
+                <button class="portfolio-piece-icon"><a href="https://www.trinetx.com/" target=_blank>
                     <img class="portfolio-piece-icon-image" src="images/trinetx-logo.svg" alt="trinetx logo" />
                 </a></button>
             </div>
@@ -60,7 +60,7 @@
                 </ul>
             </div>
             <div class="portfolio-piece-column">
-                <div class="portfolio-piece-icon"><a href="https://github.com/andrealeigh/testive_portfolio/raw/master/high_fidelity_mockups/school_analytics.pdf">
+                <div class="portfolio-piece-icon"><a href="school_analytics.pdf" target="_blank">
                     <img class="portfolio-piece-icon-image" src="images/school-analytics-icon.png" alt="school analytics icon" />
                 </a></div>
             </div>
