Adjusted height of trinetx <a> tag

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,9 +26,9 @@
     <section id="portfolio" class="portfolio-trinetx">
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
-                <button class="portfolio-piece-icon"><a href="https://www.trinetx.com/" target=_blank>
+                <div class="portfolio-piece-icon"><a style="height: 225px;" href="https://www.trinetx.com/" target="_blank">
                     <img class="portfolio-piece-icon-image" src="images/trinetx-logo.svg" alt="trinetx logo" />
-                </a></button>
+                </a></div>
             </div>
             <div class="portfolio-piece-column">
                 <h2 class="portfolio-piece-header">TriNetX, Inc: Clinical Trials Feasibility Product</h2>
