Another height adjustment

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
         <div class="portfolio-piece-row">
             <div class="portfolio-piece-column">
                 <div class="portfolio-piece-icon"><a style="height: 225px;" href="https://www.trinetx.com/" target="_blank">
-                    <img class="portfolio-piece-icon-image" src="images/trinetx-logo.svg" alt="trinetx logo" />
+                    <img style="height: 100%" class="portfolio-piece-icon-image" src="images/trinetx-logo.svg" alt="trinetx logo" />
                 </a></div>
             </div>
             <div class="portfolio-piece-column">
