Nav link copy fix

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <nav class="portfolio-nav">
         <h1><a class="portfolio-nav-name-link" href="index.html">Andrea Leigh Williamson</a></h1>
         <div class="portfolio-nav-links">
-            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">ABOUT</a>
+            <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="index.html">HOME</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link portfolio-page-link" href="#portfolio">PORTFOLIO</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="process.html">DESIGN PROCESS</a>
             <a data-scroll data-options='{ "easing": "easeOutCubic" }' class="portfolio-nav-link" href="#contact">CONTACT</a>
